# brouter

./: .gitignore  AGENTS.md  Cargo.toml  README.md  brouter.example.toml  deny.toml  flake.nix  progress.md  taplo.toml
.github/workflows/: ci.yml  release.yml
docs/: config.md
nix/home-manager/: brouter.nix
nix/modules/: brouter.nix
